--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ai-rum-monitoring",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -9,19 +10,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.6.11",
+    "lucide-react": "^0.487.0",
+    "next": "15.3.0",
+    "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.0"
+    "recharts": "^2.15.2",
+    "ts-node": "^10.9.2",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/xml2js": "^0.4.14",
+    "autoprefixer": "^10.4.16",
+    "babel-jest": "^29.7.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "@eslint/eslintrc": "^3"
+    "jest": "^29.7.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "ts-jest": "^29.3.1",
+    "typescript": "^5"
   }
 }
